<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityupdatedatabase_descreset"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/activityupdatedatabase_btreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onResetFactoryClick"
        android:text="@string/activityupdatedatabase_btreset" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityupdatedatabase_descdownload"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/activityupdatedatabase_btdownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDownloadClick"
        android:text="@string/activityupdatedatabase_btdownload" />

   <LinearLayout
        android:id="@+id/activityupdatedatabase_fragcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>
