<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="2"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/fragbooklistfilter_search"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="30dp"
        android:layout_column="1"
        android:layout_row="0" />
    
    <EditText
        android:id="@+id/fragbooklistfilter_searchbox"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_column="0"
		android:layout_row="1"
        android:text="@string/fragbooklistfilter_filterby"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/fragbooklistfilter_spinner"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1" />

    <Button
        android:id="@+id/fragbooklistfilter_gobutton"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="1"
        android:text="@string/fragbooklistfilter_go" />

</GridLayout>
