<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogeditbook_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="2" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/book_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/book_author"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/activity_book_list_popup_nb_title"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/activity_book_list_popup_nb_author"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:inputType="text" />

        <Space
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="50dp" />

    </GridLayout>

</LinearLayout>