<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.BookListActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#202020" >

        <Button
            android:id="@+id/activitybooklist_taballbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/activitybooklist_taball"
            android:onClick="onTabAllClick"
            style="?android:attr/buttonBarButtonStyle" />

        <View style="@style/verticalDivider" />
        
        <Button
            android:id="@+id/activitybooklist_tabfilterbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/activitybooklist_tabfilter"
            android:onClick="onTabFilterClick"
            style="?android:attr/buttonBarButtonStyle" />

        <View style="@style/verticalDivider" />
        
        <Button
            android:id="@+id/activitybooklist_tabsortbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/activitybooklist_tabsort"
            android:onClick="onTabSortClick"
            style="?android:attr/buttonBarButtonStyle" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>
    
    <ListView
        android:id="@+id/activity_book_list_lview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>
